deployment/sia-gateway-ppe.yaml
apiVersion: v1
kind: Service
metadata:
  name: sia-gateway-ppe-service
  labels:
    run: sia-gateway-ppe
spec:
  ports:
  - port: 80
    name: http
  selector:
    run: sia-gateway-ppe
    
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sia-gateway-ppe 
spec:
  selector:
    matchLabels:
      run: sia-gateway-ppe
  replicas: 1
  template:
    metadata:
      labels:
        run: sia-gateway-ppe
    spec:
      containers:
          - name: sia-gateway-ppe
            image: siacontainerregistry.azurecr.io/azure/sia-gateway-ppe:latest
            ports:
              - containerPort: 80
